# application-services

./: .buildconfig-android.yml  .taskcluster.yml  CHANGELOG.md  Cargo.toml  build.gradle  help.html  index.html  proguard-rules-consumer-jna.pro  publish.gradle  sitemap.xml  users.html
api/: push_bridge.html
automation/taskcluster/: decision_task.py  decisionlib.py
blog/: atom.xml  feed.xml  index.html
blog/page2/: index.html
components/fxa-client/: Cargo.toml
components/logins/: Cargo.toml
components/places/: Cargo.toml
components/places/sqlite-ext/: Cargo.toml
components/places/sqlite-ext/src/: lib.rs
components/rc_log/: Cargo.toml
components/support/guid/: Cargo.toml
components/support/guid/src/: lib.rs  rusqlite_support.rs  serde_support.rs
components/sync15/: Cargo.toml
components/viaduct/: Cargo.toml
css/: main.css
docs/: doc1.html  release-process.html
docs/accounts/: 50000-most-common-passwords.html  dev-process.html  end-to-end-encryption.html  faq.html  fxa-client-android.html  fxa-client-ios.html  local-development.html  metrics.html  project-details.html  welcome.html
docs/applications/: android-components.html  consuming-megazord-libraries.html  signing-android-apps.html  welcome.html  working-with-reference-browser.html
docs/push/: design.html  development.html  history.html  welcome.html
docs/rfcs/: sync-manager.md
docs/sync/: canned-bug-responses.html  extension-storage.html  faq.html  file-desktop-bug.html  redash.html  state-machines.html  tps.html  welcome.html
en/: help.html  index.html  users.html
fxa-client/src/: lib.rs
megazords/full/: Cargo.toml
megazords/lockbox/: Cargo.toml
megazords/reference-browser/: Cargo.toml
pairing-demo/: Cargo.toml
pairing-demo/src/: main.rs
places/src/: storage.rs
sync-storage-handbook/: ch01-components.html  ch01.1-db.html  ch01.2-store.html  ch01.3-ffi.html  ch02-telemetry.html  index.html  print.html  searchindex.js  searchindex.json
synconomicon/: ch01-data-model.html  ch01.1-logins.html  ch02-life-of-a-sync.html  ch03-builds.html  index.html  print.html  searchindex.js  searchindex.json
(+83 files in other folders)
