[workspace]
members = [
    "components/fxa-client",
    "components/fxa-client/ffi",
    "components/logins",
    "components/logins/ffi",
    "components/places",
    "components/places/ffi",
    "components/places/sqlite-ext",
    "components/support/sql",
    "components/support/ffi",
    "components/sync15",
    "megazords/lockbox",
    "megazords/reference-browser",
]

[profile.release]
opt-level = "z"
debug = true
lto = true

[patch.crates-io]
rusqlite = { git = "https://github.com/gwenn/rusqlite", branch = "from_handle" }
libsqlite3-sys = { git = "https://github.com/gwenn/rusqlite", branch = "from_handle" }
