[package]
name = "places-sqlite-ext"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = { version = "0.16.0", features = ["sqlcipher"] }
libsqlite3-sys = { version = "0.12.0", features = ["sqlcipher"] }
places = { path = "..", features = ["ffi"] }
ffi-support = { path = "../../support/ffi" }
