[package]
name = "sync-guid"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]

[dependencies]
rusqlite = { version = "0.14.0", optional = true }
serde = { version = "1.0.79", optional = true }

[features]
rusqlite_support = ["rusqlite"]
serde_support = ["serde"]
# By default we support serde, but not rusqlite.
default = ["serde_support"]

[dev-dependencies]
serde_test = "1.0.79"
